# zephyr-workspace

./: .gitignore
project/boards/custom/tracker/: Kconfig.tracker  board.cmake  board.yml  tracker-pinctrl.dtsi  tracker.dts  tracker.yaml  tracker_defconfig
project/lib/ahrs/: CMakeLists.txt  Kconfig
project/lib/ahrs/include/: ahrs.h
project/lib/ahrs/src/: ahrs.c
project/lib/ahrs/zephyr/: module.yml
project/lib/display_ui/: CMakeLists.txt  Kconfig
project/lib/display_ui/include/: display_ui.h
project/lib/display_ui/src/: display_ui.c
project/lib/display_ui/zephyr/: module.yml
project/samples/acc_calibration/: CMakeLists.txt  prj.conf
project/samples/acc_calibration/boards/: tracker_stm32u575xx.overlay
project/samples/acc_calibration/src/: main.c
project/samples/button/: CMakeLists.txt  prj.conf
project/samples/button/boards/: tracker_stm32u575xx.overlay
project/samples/compass/: CMakeLists.txt  prj.conf
project/samples/compass/boards/: tracker_stm32u575xx.overlay
project/samples/compass/src/: main.c
project/samples/display/: CMakeLists.txt  prj.conf
project/samples/display/boards/: tracker_stm32u575xx.overlay
project/samples/display/src/: main.c
project/samples/gps/: CMakeLists.txt  prj.conf
project/samples/gps/src/: main.c
project/samples/lora/: CMakeLists.txt  prj.conf
project/samples/lora/src/: main.c
project/samples/mag_calibration/: CMakeLists.txt  prj.conf
project/samples/mag_calibration/src/: main.c
project/samples/sdcard_usb/: CMakeLists.txt  prj.conf
project/samples/usb_shell/: CMakeLists.txt  prj.conf
(+4 files in other folders)
